python/error.txt
>>> Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/home/chris/my_scripts/python/IV_connection_ftp.py", line 45
    ftp.retrbinary('RETR ' + selection, localfile.write, 1024)
                                                              ^
SyntaxError: unexpected EOF while parsing
